# face-aesthetic-app

./: .gitignore  DEPLOYMENT_GUIDE.md  DEPLOY_STRATEGY.md  PROJECT_STRUCTURE.md  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
backend/: .env.example  .env.test  Dockerfile  README.md  pyproject.toml  test_basic_api.py
backend/app/: __init__.py  config.py  main.py
backend/app/api/: __init__.py
backend/app/api/v1/: __init__.py  analysis.py  auth.py  chat.py  linebot.py
backend/app/core/: __init__.py  facial_analyzer.py  report_generator.py
backend/app/models/: __init__.py  analysis.py  chat.py  linebot.py  user.py
backend/app/schemas/: supabase.py
backend/app/services/: __init__.py  analysis_service.py  chatbot_service.py  linebot_service.py  storage_service.py
backend/app/utils/: __init__.py  exceptions.py  image_processing.py  validators.py
backend/scripts/: init-db.sql
backend/tests/: __init__.py  conftest.py  test_analysis.py  test_chat.py  test_linebot.py  test_main.py
docs/: SUPABASE_SETUP.md
frontend/: .env.example  Dockerfile  next.config.js  package.json  tailwind.config.js  tsconfig.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/analysis/: AnalysisResults.tsx  AnalysisUpload.tsx  BeautyAdvice.tsx  FeatureBreakdown.tsx  RadarChart.tsx  ScoreDisplay.tsx
frontend/src/components/chat/: ChatInterface.tsx
frontend/src/components/layout/: Footer.tsx  Header.tsx
frontend/src/components/providers/: QueryProvider.tsx  SupabaseProvider.tsx
frontend/src/components/sections/: Hero.tsx
frontend/src/hooks/: useAnalysis.ts
frontend/src/types/: analysis.ts  supabase.ts
nginx/: nginx.conf
